campaign/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campaign
  labels:
    app: campaign
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campaign
  template:
    metadata:
      labels:
        app: campaign
    spec:
      containers:
        - name: campaign
          image: skccomp.azurecr.io/campaign:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
