campaign/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campaign
  labels:
    app: campaign
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: campaign
