campaign/kubernetes/virtual-service.yml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-campaign-network-rule
    namespace: omp
  spec:
    hosts:
    - campaign
    http:
    - route:
      - destination:
          host: campaign
      timeout: 3s
